SigmaCodebackup3rdSep/objects/Vendor_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Products</relationshipLabel>
        <relationshipName>Vender_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buying_Price__c</fullName>
        <label>Buying Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customs Duty taxes on imports and exports of goods.</description>
        <label>Duty Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Cost Percent of goods transported in bulk by truck, train, ship, or aircraft.</description>
        <label>Freight Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Insurance Charge is the amount of money that is must paid for an insurance policy.</description>
        <label>Insurance Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Preferred Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Stock As On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Time_Interval__c</fullName>
        <label>Lead Time Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Half-Year</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Time_for_Procurement__c</fullName>
        <label>Lead Time for Procurement</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Lead_Time__c</fullName>
        <formula>Product_Name__r.Max_Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Lead Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Qty__c</fullName>
        <label>Max Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Qty__c</fullName>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>Buying_Price__c  - Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Any other Charges to be applied until the goods arrive in the Inventory.</description>
        <label>Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vendor Products</relationshipLabel>
        <relationshipName>Vendor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quoted_Price__c</fullName>
        <label>Quoted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Product_Name__r.Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VendorProductCode__c</fullName>
        <label>Vendor Product Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To send Email Notification to the Respective Contact once PO Generated</inlineHelpText>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vendor Products</relationshipLabel>
        <relationshipName>Vendor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Locations_Type__c</field>
                <operation>equals</operation>
                <value>Vendor Inventory Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Products (Vendor Location)</relationshipLabel>
        <relationshipName>Vendor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Product</label>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>Vendor Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Do_not_Allow_Negative_values</fullName>
        <active>true</active>
        <errorConditionFormula>OR( IF( Duty__c &lt; 0, true, false),
 IF( Freight__c &lt; 0, true, false) ,
 IF( Insurance__c &lt; 0, true, false),
 IF( Other__c &lt; 0, true, false),

 IF(  ISNULL(Duty__c )  , true, false) ,
 IF(  ISNULL(Freight__c )  , true, false) ,
 IF(  ISNULL(Insurance__c )  , true, false) ,
 IF(  ISNULL(Other__c )  , true, false) )</errorConditionFormula>
        <errorMessage>Duty, Freight, Insurance or Others charges can not be negative or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Empty_Vendor_Name</fullName>
        <active>true</active>
        <description>new vender is updated with empty record</description>
        <errorConditionFormula>ISBLANK( Account_Name__c )</errorConditionFormula>
        <errorDisplayField>Account_Name__c</errorDisplayField>
        <errorMessage>Please select the Vendor name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validationfor_EmptyLocation</fullName>
        <active>true</active>
        <errorConditionFormula>Vendor_Location__r.Name == &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Vendor_Location__c</errorDisplayField>
        <errorMessage>Configure location to create new vendor product!</errorMessage>
    </validationRules>
</CustomObject>